[package]
name = "despell"
version = "1.0.0"
edition = "2021"
authors = ["Ben Sadeh"]
description = "despell puts icons in your tmux statusline"
repository = "https://github.com/bensadeh/despell"
keywords = ["tmux", "nerdfonts", "nerdfont", "stausline", "statusbar", "icons"]
license = "MIT"

[dependencies]
clap = { version = "4.3.12", features = ["derive"] }
phf = { version = "0.11.2", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.6"