[package]
name = "despell"
version = "1.1.0"
edition = "2021"
authors = ["Ben Sadeh"]
description = "despell puts icons in your tmux statusline"
repository = "https://github.com/bensadeh/despell"
keywords = ["tmux", "nerdfonts", "stausline", "statusbar", "icons"]
license = "MIT"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
color-eyre = "0.6.2"
phf = { version = "0.11.2", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.9"
